src/liboot_engine.h

typedef struct OoTEngine OoTEngine;
typedef uint32_t OoTEngineTarget;
typedef enum OoTResult
{
    OOT_ENGINE_RESULT_OK = 0,
    OOT_ENGINE_RESULT_INVALID_ARGUMENT = -1,
    OOT_ENGINE_RESULT_API_VERSION = -2,
    OOT_ENGINE_RESULT_OUT_OF_MEMORY = -3,
    OOT_ENGINE_RESULT_SINGLETON_IN_USE = -4,
    OOT_ENGINE_RESULT_ROM_UNSUPPORTED = -5,
    OOT_ENGINE_RESULT_NOT_INITIALIZED = -6,
    OOT_ENGINE_RESULT_BUSY = -7,
    OOT_ENGINE_RESULT_LINK_ALREADY_EXISTS = -8,
    OOT_ENGINE_RESULT_LINK_NOT_FOUND = -9,
    OOT_ENGINE_RESULT_AGE_RESTRICTED = -10,
    OOT_ENGINE_RESULT_TARGET_CAPACITY = -11,
    OOT_ENGINE_RESULT_TARGET_NOT_FOUND = -12,
    OOT_ENGINE_RESULT_SCENE_LOAD_FAILED = -13,
    /* The scene collision was committed, but its display-list mesh could not
       be interpreted (the native oot_scene_load result is -9). */
    OOT_ENGINE_RESULT_SCENE_GEOMETRY_UNAVAILABLE = -14,
    OOT_ENGINE_RESULT_NO_FRAME = -15,
    OOT_ENGINE_RESULT_NOT_AVAILABLE = -16
} OoTResult;
/* Host input for one simulation interval.  camLook is the camera-to-Link
   direction in the XZ plane.  It is normalized by the wrapper; (0,0) uses
   the +Z default.  Stick components are clamped to [-1,1], with negative and
   positive stickX meaning camera-left and camera-right respectively. */
typedef struct OoTEngineInput
{
    uint32_t structSize;
    float camLookX;
    float camLookZ;
    float stickX;
    float stickY;
    uint32_t buttons;             /* enum OoTEngineButtons bit mask */
} OoTEngineInput;
/* The frame and everything referenced by it are owned by OoTEngine.  Pointers
   remain valid until the next mutating call on that engine or its destruction.
   actorListTruncated is set only when more actors existed than actorCapacity. */
typedef struct OoTEngineFrame
{
    uint32_t structSize;
    uint64_t simulationTick;
    float fixedStepSeconds;
    float interpolationAlpha;
    OoTEngineLinkState link;
    OoTEngineGeometry geometry;
    const struct OoTActorInfo *actors;
    uint32_t actorCount;
    uint32_t actorCapacity;
    uint8_t actorListTruncated;
    uint8_t skeletonAvailable;
    /* Set only when otherwise valid triangles were omitted from this frame's
       Link/Navi/actor geometry because triangleCapacity was reached. */
    uint8_t linkGeometryTruncated;
    uint8_t reserved0;
    struct OoTSkeletonPose skeleton;
    OoTEngineNaviState navi;
} OoTEngineFrame;
/* Scene arrays are copied into engine-owned storage after a successful load.
   The opaque/translucent split is [0,xluStartTriangle) and
   [xluStartTriangle,numTriangles). */
typedef struct OoTEngineSceneGeometry
{
    uint32_t structSize;
    const float *position;
    const float *normal;
    const float *color;
    const float *uv;
    const uint16_t *triTexture;
    uint32_t numTriangles;
    uint32_t xluStartTriangle;
    uint32_t triangleCapacity;
    const float *alpha;           /* liboot vNEXT: 1 float/vertex shade alpha, parallel to color */
    const uint8_t *triFlags;      /* liboot vNEXT: 1 byte/triangle render flags (OoTTriangleFlags) */
} OoTEngineSceneGeometry;
/* Texture pixels are borrowed from the core cache.  Query again after scene
   changes and whenever revision changes; copy/upload pixels before retaining
   them beyond another mutating engine call. */
typedef struct OoTEngineTexture
{
    uint32_t structSize;
    uint16_t width;
    uint16_t height;
    uint8_t wrapS;
    uint8_t wrapT;
    uint16_t reserved;
    uint32_t revision;
    const uint8_t *rgbaPixels;
    size_t rgbaSize;
} OoTEngineTexture;
/* Decoded PCM views are core-owned and valid until engine destruction. */
typedef struct OoTEnginePcm
{
    uint32_t structSize;
    const int16_t *samples;
    uint32_t sampleCount;
    uint32_t sampleRate;
    uint32_t loopStart;           /* sampleCount for a non-looping PCM clip */
} OoTEnginePcm;
/* liboot vNEXT: raycast the live collision world under a point; fills real
   floor type/material/hookshot from the surface. NOT_AVAILABLE if no floor. */
extern OOT_LIB_FN OoTResult oot_engine_scene_query_surface(OoTEngine *engine,
                                                           float x, float y, float z,
                                                           struct OoTSurfaceInfo *outInfo);
/* step advances exactly one native simulation tick.  advance accumulates host
   time and runs at most maxSubsteps ticks, discarding excess catch-up time.
   A button observed during a no-tick advance is latched for the next tick. */
extern OOT_LIB_FN OoTResult oot_engine_step(OoTEngine *engine,
                                            const OoTEngineInput *input,
                                            const OoTEngineFrame **outFrame);
extern OOT_LIB_FN OoTResult oot_engine_advance(OoTEngine *engine,
                                               float elapsedSeconds,
                                               const OoTEngineInput *input,
                                               uint32_t *outSteps,
                                               const OoTEngineFrame **outFrame);
extern OOT_LIB_FN OoTResult oot_engine_get_frame(OoTEngine *engine,
                                                 const OoTEngineFrame **outFrame);
extern OOT_LIB_FN OoTResult oot_engine_reset_clock(OoTEngine *engine);
extern OOT_LIB_FN OoTResult oot_engine_static_world_load(
    OoTEngine *engine, const struct OoTSurface *surfaces, uint32_t numSurfaces,
    const struct OoTWaterBox *waterBoxes, uint32_t numWaterBoxes);
/* roomIndex selects one room; pass -1 to load the whole scene (all rooms
   concatenated into one geometry stream). See oot_scene_load in liboot.h. */
extern OOT_LIB_FN OoTResult oot_engine_scene_load(OoTEngine *engine,
                                                  int32_t sceneIndex, int32_t roomIndex,
                                                  int32_t *outNativeResult);
extern OOT_LIB_FN OoTResult oot_engine_scene_get_geometry(
    OoTEngine *engine, const OoTEngineSceneGeometry **outGeometry);
/* liboot vNEXT: door-driven room transitions. set_room swaps the active room
   (roomIndex -1 = whole scene); get_door_count/get_door expose the scene's
   transition actors so a host can detect a crossing and call set_room. */
extern OOT_LIB_FN OoTResult oot_engine_scene_set_room(OoTEngine *engine,
                                                      int32_t roomIndex,
                                                      int32_t *outNativeResult);
extern OOT_LIB_FN OoTResult oot_engine_scene_get_door_count(OoTEngine *engine,
                                                            uint32_t *outCount);
extern OOT_LIB_FN OoTResult oot_engine_scene_get_door(OoTEngine *engine, uint32_t index,
                                                      struct OoTDoor *outDoor);
extern OOT_LIB_FN OoTResult oot_engine_scene_get_spawn(OoTEngine *engine,
                                                       int32_t spawnIndex,
                                                       float outPosition[3],
                                                       int16_t *outYaw);
/* liboot vNEXT: the loaded scene's sound settings (cmd 0x15).  outSeqId is the
   background-music sequence id and outAmbienceId the nature-ambience id for the
   current scene; both are set to -1 when the scene declares no sound settings.
   A host feeds these to its own sequenced-audio player. */
extern OOT_LIB_FN OoTResult oot_engine_scene_get_sequence_id(OoTEngine *engine,
                                                             int32_t *outSeqId);
extern OOT_LIB_FN OoTResult oot_engine_scene_get_ambience_id(OoTEngine *engine,
                                                             int32_t *outAmbienceId);
/* liboot vNEXT: the loaded scene's active light/fog settings (see
   oot_scene_get_environment). liboot already bakes this shade into emitted
   vertex colors; the values let a host drive its own lighting/fog. Returns
   OOT_ENGINE_RESULT_NOT_FOUND-style empty (valid=0, fields zeroed) when no
   scene is loaded. */
extern OOT_LIB_FN OoTResult oot_engine_scene_get_environment(OoTEngine *engine,
                                                             struct OoTSceneEnvironment *outEnv);
/* Snapshot of the real scene/room fields currently driving Player behavior.
   The caller owns outRuntime; the function copies into it while holding the
   engine guard. Returns NOT_AVAILABLE after a custom world load or before any
   ROM scene is active. See OoTSceneRuntime in liboot.h. */
extern OOT_LIB_FN OoTResult oot_engine_scene_get_runtime(OoTEngine *engine,
                                                        struct OoTSceneRuntime *outRuntime);
extern OOT_LIB_FN OoTResult oot_engine_target_create(OoTEngine *engine,
                                                      float x, float y, float z,
                                                      float focusHeight,
                                                      OoTEngineTarget *outTarget);
extern OOT_LIB_FN OoTResult oot_engine_target_move(OoTEngine *engine,
                                                    OoTEngineTarget target,
                                                    float x, float y, float z);
extern OOT_LIB_FN OoTResult oot_engine_target_remove(OoTEngine *engine,
                                                      OoTEngineTarget target);
extern OOT_LIB_FN OoTResult oot_engine_targets_clear(OoTEngine *engine);
extern OOT_LIB_FN OoTResult oot_engine_set_render_flags(OoTEngine *engine,
                                                         uint32_t renderFlags);
extern OOT_LIB_FN OoTResult oot_engine_get_render_flags(OoTEngine *engine,
                                                         uint32_t *outRenderFlags);
extern OOT_LIB_FN OoTResult oot_engine_texture_count(OoTEngine *engine,
                                                      uint32_t *outCount);
extern OOT_LIB_FN OoTResult oot_engine_texture_get(OoTEngine *engine,
                                                    uint32_t index,
                                                    OoTEngineTexture *outTexture);
extern OOT_LIB_FN OoTResult oot_engine_voice_get(OoTEngine *engine,
                                                 uint16_t sfxId,
                                                 OoTEnginePcm *outPcm);
extern OOT_LIB_FN OoTResult oot_engine_ocarina_note_get(OoTEngine *engine,
                                                        uint8_t noteIndex,
                                                        OoTEnginePcm *outPcm);