src/liboot.h

/* liboot vNEXT: the twelve ocarina songs, in the game's own OcarinaSongId
   order. Each song is a sequence of note indices 0..4 (the same A/C-down/
   C-right/C-left/C-up indices oot_get_ocarina_note uses). The first six are
   the warp/teleport songs. */
enum OoTOcarinaSong
{
    OOT_SONG_MINUET = 0,   /* warp: Sacred Forest Meadow */
    OOT_SONG_BOLERO,       /* warp: Death Mountain Crater */
    OOT_SONG_SERENADE,     /* warp: Lake Hylia */
    OOT_SONG_REQUIEM,      /* warp: Desert Colossus */
    OOT_SONG_NOCTURNE,     /* warp: Graveyard */
    OOT_SONG_PRELUDE,      /* warp: Temple of Time */
    OOT_SONG_SARIAS,
    OOT_SONG_EPONAS,
    OOT_SONG_LULLABY,
    OOT_SONG_SUNS,
    OOT_SONG_TIME,
    OOT_SONG_STORMS,
    OOT_SONG_COUNT
};
/* Fill outNotes (capacity >= 8) with a song's note-index sequence and its
   length. Returns false for an out-of-range song. Lets a host render/teach a
   song or drive playback of oot_get_ocarina_note per note. */
extern OOT_LIB_FN bool oot_ocarina_song_notes( int32_t song, uint8_t outNotes[8],
                                               int32_t *outCount );
/* Recognize a played sequence: returns the enum OoTOcarinaSong whose pattern
   matches the tail of notes[0..count) (so a host feeds notes as Link plays and
   detects a completed song, warp songs included), or -1 if none match. Each
   note is a 0..4 index; other values never match. */
extern OOT_LIB_FN int32_t oot_ocarina_match( const uint8_t *notes, int32_t count );