bindings/csharp/LibOot.cs


        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_scene_query_surface")]
        public static extern Result EngineSceneQuerySurface(IntPtr engine,
            float x, float y, float z, out SurfaceInfo info);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_step")]
        public static extern Result EngineStep(IntPtr engine,
            EngineInput* input, out IntPtr frame);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_advance")]
        public static extern Result EngineAdvance(IntPtr engine,
            float elapsedSeconds, EngineInput* input, out uint steps,
            out IntPtr frame);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_get_frame")]
        public static extern Result EngineGetFrame(IntPtr engine,
            out IntPtr frame);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_reset_clock")]
        public static extern Result EngineResetClock(IntPtr engine);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_static_world_load")]
        public static extern Result EngineStaticWorldLoad(IntPtr engine,
            Surface* surfaces, uint surfaceCount, WaterBox* waterBoxes,
            uint waterBoxCount);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_scene_load")]
        public static extern Result EngineSceneLoad(IntPtr engine,
            int sceneIndex, int roomIndex, out int nativeResult);

        public static Result EngineSceneLoad(IntPtr engine, Scene scene,
            int roomIndex, out int nativeResult)
        {
            return EngineSceneLoad(engine, (int)scene, roomIndex,
                out nativeResult);
        }

        // liboot vNEXT: door-driven room transitions.
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_scene_set_room")]
        public static extern Result EngineSceneSetRoom(IntPtr engine,
            int roomIndex, out int nativeResult);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_scene_get_door_count")]
        public static extern Result EngineSceneGetDoorCount(IntPtr engine, out uint count);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_scene_get_door")]
        public static extern Result EngineSceneGetDoor(IntPtr engine, uint index, out Door door);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_scene_get_sequence_id")]
        public static extern Result EngineSceneGetSequenceId(IntPtr engine, out int seqId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_scene_get_ambience_id")]
        public static extern Result EngineSceneGetAmbienceId(IntPtr engine, out int ambienceId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_scene_get_environment")]
        public static extern Result EngineSceneGetEnvironment(IntPtr engine, out SceneEnvironment env);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_scene_get_runtime")]
        public static extern Result EngineSceneGetRuntime(IntPtr engine, out SceneRuntime runtime);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_scene_get_geometry")]
        public static extern Result EngineSceneGetGeometry(IntPtr engine,
            out IntPtr geometry);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_scene_get_spawn")]
        public static extern Result EngineSceneGetSpawn(IntPtr engine,
            int spawnIndex, float* position, short* yaw);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_target_create")]
        public static extern Result EngineTargetCreate(IntPtr engine,
            float x, float y, float z, float focusHeight, out uint target);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_target_move")]
        public static extern Result EngineTargetMove(IntPtr engine,
            uint target, float x, float y, float z);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_target_remove")]
        public static extern Result EngineTargetRemove(IntPtr engine,
            uint target);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_targets_clear")]
        public static extern Result EngineTargetsClear(IntPtr engine);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_set_render_flags")]
        public static extern Result EngineSetRenderFlags(IntPtr engine,
            RenderFlags flags);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_get_render_flags")]
        public static extern Result EngineGetRenderFlags(IntPtr engine,
            out RenderFlags flags);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_texture_count")]
        public static extern Result EngineTextureCount(IntPtr engine,
            out uint count);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_texture_get")]
        public static extern Result EngineTextureGet(IntPtr engine,
            uint index, ref EngineTexture texture);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_voice_get")]
        public static extern Result EngineVoiceGet(IntPtr engine,
            ushort sfxId, ref EnginePcm pcm);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_engine_ocarina_note_get")]
        public static extern Result EngineOcarinaNoteGet(IntPtr engine,
            byte noteIndex, ref EnginePcm pcm);

        // Stateless ocarina-song helpers (raw API — no engine handle needed).
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_ocarina_song_notes")]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool OcarinaSongNotes(int song, byte* outNotes, out int outCount);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
            EntryPoint = "oot_ocarina_match")]
        public static extern int OcarinaMatch(byte* notes, int count);
    }

    // Mirrors enum OoTOcarinaSong (indices are the ABI contract, do not reorder).
    public enum OcarinaSong
    {
        Minuet = 0,   // warp: Sacred Forest Meadow
        Bolero,       // warp: Death Mountain Crater
        Serenade,     // warp: Lake Hylia
        Requiem,      // warp: Desert Colossus
        Nocturne,     // warp: Graveyard
        Prelude,      // warp: Temple of Time
        Sarias,
        Eponas,
        Lullaby,
        Suns,
        Time,
        Storms,
        Count
    }
}
